--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,7 +8,15 @@
     <div class="board-box min-board-height right-float-menu-parent"
          data-controller="mission rightfloatmenu"
          data-rightfloatmenu-top-offset="36">
-      <div class="project-title"><%= @project.name %> </div>
+      <div class="flex-hcenter">
+	<div class="project-title">
+	  <%= @project.name %>
+	</div>
+	<%= link_to edit_project_path(@project.hashid), class: "project-setting" do %>
+          <span class="project-setting-icon glyphicon glyphicon-cog"></span>
+          <span class="">设置</span>
+	<% end %>
+      </div>
       <div class="project-splitter"></div>
 
       <div class="right-float-menu-box right-float-menu-top">
@@ -17,11 +25,11 @@
              data-action="scroll@window->rightfloatmenu#onScroll">
           <ul class="right-float-menu-scrollarea">
 	    <% if @project.mission_lists.length > 0 %>
-              <% @project.mission_lists.each do |mission_list| %>
+	      <% @project.mission_lists.each do |mission_list| %>
                 <%= render "mission_lists/create_mission_list_item", mission_list: mission_list %>
-              <% end %>
+	      <% end %>
             <% else %>
-              <li id="mission-list-default"
+	      <li id="mission-list-default"
 		  class="right-float-menu-item">
 		默认任务列表
 	      </li>
@@ -29,7 +37,7 @@
           </ul>
 	  <ul>
             <li class="mission-list-new-form-item">
-              <div class="mission-list-new-form"
+	      <div class="mission-list-new-form"
                    data-target="mission.missionListNewForm">
                 <div class="flex-vcenter">
                   <input type="text"
@@ -48,15 +56,15 @@
                      data-action="mission#clickMissionListCancelButton">
                     取消</a>
                 </div>
-              </div>
+	      </div>
             </li>
             <li>
-              <a href="#"
+	      <a href="#"
                  class="mission-list-add-button"
                  data-target="mission.missionListNewButton"
                  data-action="mission#clickMissionListNewButton">
                 添加新任务清单
-              </a>
+	      </a>
             </li>
 	  </ul>
         </div>
