--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -338,11 +338,27 @@ li {
     font-weight: bold;
 }
 
+.project-header {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    margin-right: auto;
+}
+
 .project-title {
     font-size: 26px;
     font-weight: 400;
     margin-top: 20px;
+    float: left;
+    width: 100%;
+}
+
+.project-summary {
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 10px;
     margin-bottom: 20px;
+    color: #999;
 }
 
 .project-setting {
@@ -351,14 +367,16 @@ li {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-left: auto;
-    color: #666;
 }
 
 .project-setting-icon {
     font-size: 20px;
     color: #666;
     margin-bottom: 10px;
+}
+
+.project-setting-name {
+    color: #666;
 }
 
 .project-splitter {
