--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1111,3 +1111,32 @@ input[type="checkbox"]:disabled + label::before {
     border-radius: var(--button-radius);
     width: 200px;
 }
+
+.mission-toolbar {
+    display: none;
+    filter: drop-shadow(-4px 1px 2px rgba(0, 0, 0, .3));
+    box-sizing: borderQ-box;
+    position: absolute;
+    font-size: 13px;
+    font-weight: 350;
+    color: #222;
+    background: white;
+    width: 100%;
+    width: max-content;
+    height: auto;
+    height: 24px;
+    padding-top: 4px;
+    padding-left: 12px;
+    padding-right: 12px;
+    border-radius: 12px 0 3px 12px;
+    text-align: center;
+    top: 270px;
+    left: 460px;
+    z-index: 9999;
+}
+
+.mission-toolbar-item {
+    margin-left: 5px;
+    margin-right: 5px;
+    color: #666;
+}
