--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -5,6 +5,20 @@
   </head>
   <body class="content-page-body" id="<%= controller.controller_name %>-<%= controller.action_name %>">
     <%= render 'layouts/header' %>
+
+    <%= render "layouts/confirm_dialog", message: "确定要删除这个任务吗?", controller: "mission", action: "mission#deleteMission" %>
+
+    <div class="mission-toolbar"
+	 data-controller="mission"
+	 data-action="mouseout->mission#mouseOutMissionToolbar">
+      <a href="#"
+	 class="mission-toolbar-item glyphicon glyphicon-trash"
+	 data-action="mission#clickDeleteMissionButton"></a>
+      <a href="#"
+	 class="mission-toolbar-item glyphicon glyphicon-pencil"
+	 data-action="mission#clickEditMissionButton"></a>
+    </div>
+
     <div class="board-box min-board-height right-float-menu-parent"
          data-controller="mission rightfloatmenu"
          data-rightfloatmenu-top-offset="36">
