Add textarea placeholder

--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -70,7 +70,7 @@
                    data-action="keydown->mission#enterMissionPageEdit">
             <button type="button" class="btn mission-distributor">未指派</button>
           </div>
-	  <textarea class="mission-edit-textarea"></textarea>
+	  <textarea class="mission-edit-textarea" placeholder="任务描述"></textarea>
           <div>
             <button class="btn-sm mission-edit-submit-button"
                     data-action="mission#clickMissionPageEditSubmitButton">
