Finish mission summary action.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1234,3 +1234,12 @@ input[type="checkbox"]:disabled + label::before {
 .margin-top-normal {
     margin-top: 24px;
 }
+
+.mission-summary {
+    font-size: 16px;
+    margin-left: 50px;
+}
+
+.mission-add-summary-button {
+    margin-left: 50px;
+}
