--- a/app/views/comments/_create_comment_list.html.erb
+++ b/app/views/comments/_create_comment_list.html.erb
@@ -1,5 +1,4 @@
-<ul id=<%= mission.hashid %>
-    class="mission-comment-list">
+<ul class="mission-comment-list">
   <% mission.comments.each do |comment| %>
     <%= render "comments/create_comment", comment: comment %>
   <% end %>
