Fixed mission summary title

--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -111,7 +111,7 @@
 	  <a href="#"
              class="btn"
              data-action="mission#clickMissionPageEditButton">
-            添加检查项
+            添加任务描述
           </a>
         </div>
       <% end %>
