--- a/app/views/comments/_create_comment_list.html.erb
+++ b/app/views/comments/_create_comment_list.html.erb
@@ -1,4 +1,5 @@
-<ul class="mission-comment-list">
+<ul class="mission-comment-list"
+    data-controller="comment">
   <% mission.comments.each do |comment| %>
     <%= render "comments/create_comment", comment: comment %>
   <% end %>
