--- a/app/views/comments/_create_comment.html.erb
+++ b/app/views/comments/_create_comment.html.erb
@@ -1,5 +1,5 @@
 <li class="mission-comment"
-    data-action="mouseover->comment#mouseOverComment mouseout->comment#mouseOutComment">
+    data-action="mouseenter->comment#mouseEnterComment">
   <div class="mission-comment-user">
     <%= User.find(comment.user_id).name %>
   </div>
