--- a/app/views/comments/_create_comment_list.html.erb
+++ b/app/views/comments/_create_comment_list.html.erb
@@ -1,6 +1,7 @@
 <ul class="mission-comment-list"
-    data-controller="comment">
+    data-controller="comment"
+    data-action="mouseleave->comment#mouseLeaveComment">
   <% mission.comments.each do |comment| %>
-    <%= render "comments/create_comment", comment: comment %>
+  <%= render "comments/create_comment", comment: comment %>
   <% end %>
 </ul>
