Use mouseenter/mouseleave instead mouseover/mouseout events.

--- a/app/views/missions/_create_mission.html.erb
+++ b/app/views/missions/_create_mission.html.erb
@@ -1,5 +1,5 @@
 <li id=<%= mission.hashid %>
-    data-action="mouseover->mission#mouseOverMission mouseout->mission#mouseOutMission">
+    data-action="mouseenter->mission#mouseEnterMission mouseleave->mission#mouseLeaveMission">
   <input type="checkbox" class="mission-checkbox" id=<%= mission.hashid %>>
   <label for=<%= mission.hashid %>
          class="mission-title">
