--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -10,7 +10,7 @@
 
     <div class="mission-toolbar"
 	 data-controller="mission"
-	 data-action="mouseout->mission#mouseOutMissionToolbar">
+	 data-action="mouseleave->mission#mouseLeaveMissionToolbar">
       <a href="#"
 	 class="mission-toolbar-item glyphicon glyphicon-trash"
 	 data-action="mission#clickDeleteMissionButton"></a>
