--- a/app/views/mission_lists/show.html.erb
+++ b/app/views/mission_lists/show.html.erb
@@ -6,6 +6,17 @@
   <body class="content-page-body" id="<%= controller.controller_name %>-<%= controller.action_name %>">
     <%= render "layouts/loading_dialog", message: "正在删除任务列表..." %>
 
+    <div class="mission-toolbar"
+         data-controller="mission"
+         data-action="mouseleave->mission#mouseLeaveMissionToolbar">
+      <a href="#"
+         class="mission-toolbar-item glyphicon glyphicon-trash"
+         data-action="mission#clickDeleteMissionButton"></a>
+      <a href="#"
+         class="mission-toolbar-item glyphicon glyphicon-pencil"
+         data-action="mission#clickEditMissionButton"></a>
+    </div>
+
     <%= render 'layouts/header' %>
 
     <%= link_to project_url(@project.hashid) do %>
