--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -5,19 +5,8 @@
   </head>
   <body class="content-page-body" id="<%= controller.controller_name %>-<%= controller.action_name %>">
     <%= render "layouts/loading_dialog", message: "正在删除任务..." %>
-
     <%= render 'layouts/header' %>
-
-    <div class="mission-toolbar"
-         data-controller="mission"
-         data-action="mouseleave->mission#mouseLeaveMissionToolbar">
-      <a href="#"
-         class="mission-toolbar-item glyphicon glyphicon-trash"
-         data-action="mission#clickDeleteMissionButton"></a>
-      <a href="#"
-         class="mission-toolbar-item glyphicon glyphicon-pencil"
-         data-action="mission#clickMissionPageEditButton"></a>
-    </div>
+    <%= render "layouts/mission_toolbar" %>
 
     <a href="#"
        class="comment-edit-button glyphicon glyphicon-align-justify"
